line-length changes only in multiparadigm.tex.

--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -11,11 +11,13 @@
 -----------------------------------------------------------------------------
 
 
-Over the years another approach has branched off from embedding languages, to merge and/or integrate programming 
-languages from different paradigms. Let us take an example of the \progLang{Scala} Programming Language \cite{website:scala}, a 
-hybrid Object-Functional Programming Language which takes a leaf from each of the two books. In this thesis, the languages in 
-question are \progLang{Haskell} and \progLang{Prolog}. This section takes a look at the literature on Multi Paradigm Languages, mainly Functional 
-Logic Programming Languages that combine two of the most widespread Declarative Programming Styles.
+Over the years another approach has branched off from embedding languages, to merge and/or integrate programming
+languages from different paradigms.
+Let us take an example of the \progLang{Scala} Programming Language \cite{website:scala}, a hybrid
+Object-Functional Programming Language which takes a leaf from each of the two books.
+In this thesis, the languages in question are \progLang{Haskell} and \progLang{Prolog}.
+This section takes a look at the literature on Multi Paradigm Languages, mainly Functional Logic Programming
+Languages that combine two of the most widespread Declarative Programming Styles.
 
 A peak into language classification reveals that it is not always a straight forward task to segregate languages
 according to their features and/or characteristics.
@@ -23,8 +25,9 @@ Turns out that there are a number of notions which play a role in deciding where
 Many a times a language ends up being a part of almost all paradigms due extensive libraries.
 Simply speaking, a multi-paradigm programming language is a programming language that supports more than one
 programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846}, more over as Timothy Budd puts it
-\cite{website:wikimultiparadigm} \yyy{"}{``}The idea of a multi paradigm language is to provide a framework in which
-programmers can work in a variety of styles, freely intermixing constructs from different paradigms.\yyy{"}{''}
+\cite{website:wikimultiparadigm} \yyy{"}{``}The idea of a multi paradigm language is to provide a framework in
+which programmers can work in a variety of styles, freely intermixing constructs from different
+paradigms.\yyy{"}{''}
 
 
 
@@ -40,12 +43,15 @@ Programming Paradigms.
   
 \item[$\bullet$] Multi Paradigm Languages
 
-A lot has been talked and discussed on coming to clear grounds about the classification of programming languages. If the conventional ideology is
- considered then the scope of each language is pretty much infinite as small extension modules replicate different feature sets which are not naturally 
-native to the language itself. The definitions of multi paradigm languages across the web \cite{website:wikimultiparadigm,website:mdn,website:blogc2}
- converge to roughly the same thing that of providing a framework to work with different styles with a list of languages 
-\cite{website:wikimpllist,website:dmoz} that ticks the boxes. Generally speaking, it does not feel all that hot or popular in programming circles; one 
-reason could be that it is a very broad topic and specifying details can clear the fog.
+  A lot has been talked and discussed on coming to clear grounds about the classification of programming languages.
+  If the conventional ideology is considered then the scope of each language is pretty much infinite as small
+  extension modules replicate different feature sets which are not naturally native to the language itself.
+  The definitions of multi paradigm languages across the web
+  \cite{website:wikimultiparadigm,website:mdn,website:blogc2} converge to roughly the same thing that of providing
+  a framework to work with different styles with a list of languages \cite{website:wikimpllist,website:dmoz} that
+  ticks the boxes.
+  Generally speaking, it does not feel all that hot or popular in programming circles; one reason could be that it
+  is a very broad topic and specifying details can clear the fog.
 
 \begin{comment}
 \begin{enumerate}
