--- a/proto1.tex
+++ b/proto1.tex
@@ -13,12 +13,10 @@
 
 \section{About this chapter}
 
-This chapter demonstrates a fairly generic\endnote{%
-  Really try to avoid hedging your bets with scare-quotes.
-}
-procedure of creating an open embedded domain specific language in \progLang{Haskell} along
-with \textit{monadic unification}. As a proof of concept, the implementation consists of creating a \progLang{Prolog} like open language
-whose unification procedure is carried out in a monad.
+This chapter demonstrates a fairly generic procedure of creating an open embedded domain specific language in
+\progLang{Haskell} along with \textit{monadic unification}.
+As a proof of concept, the implementation consists of creating a \progLang{Prolog} like open language whose
+unification procedure is carried out in a monad.
 
 
 \section{Ideas}
