removed the "components" footnote.

--- a/proto1.tex
+++ b/proto1.tex
@@ -20,14 +20,7 @@ unification procedure is carried out in a monad.
 
 
 \section{Ideas}
-There are four main ideas in this chapter\endnote{%
-  The list of four components seems to be of different kinds of things.
-  \begin{compactitem}
-  \item Items 2 and 3 are libraries.
-  \item Item 4 is what you are building
-  \end{compactitem}
-  Do you see the circularity of describing the thing you are building as a component of itself?
-}
+There are four main ideas in this chapter
 that we work with to develop a working implementation of embedded \progLang{Prolog}
 using the concepts mentioned above.
 
