removed an "And ..." comment.

--- a/proto1.tex
+++ b/proto1.tex
@@ -44,9 +44,7 @@ The ones relevant to this thesis are,
   and finding other possible solutions.
 
 \item
-  Lastly, the query resolver which combines the unification and search strategy to return a result.\endnote{%
-    Avoid starting sentences with ``And''---except where you want to be surprising.
-}
+  Lastly, the query resolver which combines the unification and search strategy to return a result.
 \end{enumerate}
 
 \item \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib}
