removed comments at the beginning of 11.3 .

--- a/proto1.tex
+++ b/proto1.tex
@@ -116,21 +116,11 @@ Each of the components are discussed in the following sections.
 \section{How Prolog works}
 
 To replicate \progLang{Prolog} we look into how it works \cite{webiste:learnprolognow}.
+%
+As any other language we start with the syntax and semantics.
+We begin with the programming constructs of the language.
 
-\textcolor{red}{There's a sentence or more missing here. The sentence above leads up to expect a very
-  high-level view.  Below, we are in the middle of discussing a syntax feature called terms.
-  Below I would simplify, and just write ``\progLang{Prolog} has three types of terms:''.
-}
-
-As any other language\endnote{%
-  Clean up the sentence!
-  Do you mean ``As with any other language, we start with the syntax and semantics.''? 
-  
-  When we talk about a language we talk about the programming constructs may be?
-}
-we start with the syntax and semantics. We begin with the programming constructs of the language.
-
-\progLang{Prolog} has three types of terms::
+\progLang{Prolog} has three types of terms:
 \begin{enumerate}
 \item Constants.
 
