Removed a new page and [h] specifier.

--- a/proto1.tex
+++ b/proto1.tex
@@ -191,8 +191,6 @@ The other part is actually reaching a point where two terms need to be
 unified i.e searching.
 Together they form the query resolver in \progLang{Prolog}.
 
-\newpage
-
 For example, consider the append function
 
 \begin{minted}[linenos]{prolog}
@@ -201,7 +199,7 @@ append([H|T],L2,[H|L3])  :-  append(T,L2,L3).
 \end{minted}
 
 
-\begin{figure}[h]
+\begin{figure}
 \centering
 \includegraphics[scale = 0.5]{PrologAppendWorking.png}
 \caption{Trace for append \cite{webiste:learnprolognowappend}}
